--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -14,8 +14,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@ignite-ui/ts-config": "*",
-    "@ignite-ui/eslint-config": "*",
+    "@felipesouzab-ignite-ui/ts-config": "*",
+    "@felipesouzab-ignite-ui/eslint-config": "*",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
   }
