--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -33,10 +33,10 @@
     "vite": "^4.4.9"
   },
   "dependencies": {
-    "@ignite-ui/eslint-config": "*",
-    "@ignite-ui/react": "*",
-    "@ignite-ui/tokens": "*",
-    "@ignite-ui/ts-config": "*",
+    "@felipesouzab-ignite-ui/eslint-config": "*",
+    "@felipesouzab-ignite-ui/react": "*",
+    "@felipesouzab-ignite-ui/tokens": "*",
+    "@felipesouzab-ignite-ui/ts-config": "*",
     "@storybook/addon-a11y": "^6.5.12",
     "phosphor-react": "^1.4.1",
     "polished": "^4.2.2",
